code tiếp service

--- a/TaskProject.API/appsettings.json
+++ b/TaskProject.API/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "http://localhost:8080/",
+    "Audience": "http://localhost:8080/",
+    "Key": "TheRandomKeyCreatedByDoanVanViet"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": { "MySQL": "Server=localhost; Port=3306; Database=task_project; Uid=root; Pwd=123456;" }
   //"ConnectionStrings": {
