--- a/TaskProject.DL/TaskProject.DL.csproj
+++ b/TaskProject.DL/TaskProject.DL.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Dapper" Version="2.1.11" />
 		<PackageReference Include="Microsoft.Exchange.WebServices" Version="2.2.0" />
 		<PackageReference Include="MySqlConnector" Version="2.2.7" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 </Project>
